--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="450"></canvas>
-    <script src="bundle.js"></script>
+    <script src="ui.js"></script>
   </body>
 </html>
